Fix nav text wrapping

--- a/src/app/etc/App.css
+++ b/src/app/etc/App.css
@@ -141,6 +141,10 @@ h1,
 	background-color: #337ab7;
 }
 
+.nav-justified {
+	white-space: nowrap;
+}
+
 @keyframes App-logo-spin {
 	from {
 		transform: rotate(0deg);
